--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+		<h1>Why I Want to become a developer?</h1>
+	    <p>I'm 20 and I've been a student for most years of my life.Over the past couple of years I've realised that I enjoy practical learning more also i want to bring out my creativity.The reasons for me to become a developer are that 
+			It is the opportnity to learn new things everyday.
+			I get to use my creative vision and imagination.
+			I enjoy travelling and in my journey as a  dev i might get chances to travel new destinations.(that was kinda poetic(maybe))
+			Lastly, developers get a good salary adding to that i can start freelancing anytime too. 
+			Also, I might start E-commerce after knowing the inside outs of the tech.
+			So yeah this is preety much it for now.
+
+			
+			
+		</p>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
